--- a/public/stylesheets/hostRoom.less
+++ b/public/stylesheets/hostRoom.less
@@ -21,9 +21,7 @@ body { perspective: 1000; }
 	right: 1rem;
 
 	.text {
-		border-bottom: 1px solid;
-		font-size: 2.5rem;
-		line-height: 3.5rem;
+		font-size: 2rem;
 		text-align: right;
 	}
 
@@ -163,13 +161,20 @@ ul#users {
 		width: 200px;
 		height: 425px;
 		margin: 20px;
+		.name {
+			font-size: 1.2rem;
+			line-height: 2rem;
+			font-weight: bold;
+			text-align: center;
+			color: #fff;
+		}
 		.card {
 			.cardStyle();
 		}
 		.kickVoter, .ಠ_ಠ {
 			display: none;
 			position: absolute;
-			right: 3px;
+			right: -21px;
 			width: 20px;
 			height: 40px;
 			line-height: 38px;
