--- a/views/httpError.jade
+++ b/views/httpError.jade
@@ -10,4 +10,4 @@ block mainContent
 					.fa.fa-exclamation-triangle
 				.cornerValue.bottomright 
 					.fa.fa-exclamation-triangle
-		p Head back to <a href="/">bitpoints.io</a>
+		p Head back to <a href="/">bitpoints.digital.vistaprint.io</a>
