--- a/views/kick.jade
+++ b/views/kick.jade
@@ -3,4 +3,4 @@ extends layout
 block content
 	#kick
 		p Sorry #{name}, you've been removed from room #{roomId}
-		p Return to <a href="/">bitpoints.io</a>
+		p Return to <a href="/">bitpoints.digital.vistaprint.io</a>
